Removed "docker-" prefix from image name

--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -3,7 +3,7 @@ name: Build Image
 on: [push, pull_request, workflow_dispatch]
 
 env:
-  ENDPOINT: "weberphilipp/docker-iperf3"
+  ENDPOINT: "weberphilipp/iperf3"
   BRANCH: "master"
 
 jobs:
